--- a/style.css
+++ b/style.css
@@ -7,13 +7,13 @@
 ::-webkit-scrollbar{
     scrollbar-width: none;
 }
-body{
-    display: flex;
-    flex-direction: column;
-    background-color:rgb(185, 33, 59) ;
-    padding: 4px;
- }
-@media (min-width:600px){
+    body{
+        display: flex;
+        flex-direction: column;
+        background-color:rgb(185, 33, 59) ;
+        padding: 4px;
+        width: 100%;
+     }
     header{
         height:10vh;
         background-color:rgba(0, 0, 0, 0.619);
@@ -41,7 +41,6 @@ body{
         left: 10px;
         z-index: 1000;
     }
-    
     .sidebar{
         height: 95%;
         width: 140px;
@@ -90,19 +89,21 @@ body{
         background-size: cover;
         background-position: center; 
         height: 150vh;
+        width: 100%;
         border-radius: 10px;
         margin-top: 10px;
+        display:flex;
+        justify-content: right;
+        align-items:center;
      }
     .main-container h1{
         width: 50%;
         color: wheat;
-        position: relative;
-        left:470px;
-        top:20px;
-        font-size:26px;
+        font-size:20px;
+        justify-self: right;
     }
     .chat-container {
-        width: 500px;
+        width:40%;
         height: 400px;
         background:white;
         border-radius: 10px;
@@ -111,9 +112,6 @@ body{
         margin-right: 20px;
         flex-direction: column;
         overflow: hidden;
-        position: relative;
-        left:470px;
-        top: 40px;
     }
     .chat-box {
         flex:1;
@@ -151,8 +149,7 @@ body{
     #chatbot-message i{
         font-size:26px;
         color:rgb(19, 62, 193);
-        margin-right:10px;
-        
+        margin-right:10px; 
     }
     #chatbot-message p{
         background-color:rgba(16, 16, 15, 0.273);
@@ -247,228 +244,233 @@ body{
     .footer-social ul li a:hover{
         border-bottom: 1px solid cyan;
     } 
-}
-
 /* for mobile */
-
-header{
-    height:8vh;
-    background-color:rgba(0, 0, 0, 0.619);
-    border-radius: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px;
-    z-index:1;
-}
-header i{
-   font-size:35px;
-   color: white;
-   cursor: pointer;
-}
-header i:hover{
-    scale: 1.1;
-}
-.menu-toggle {
-    font-size: 30px;
-    cursor: pointer;
-    padding: 10px;
-    background-color: #333;
-    position: absolute;
-    top: 10px;
-    left: 10px; 
-}
-.sidebar{
-    height: auto;
-    width:100%;
-    position:absolute;
-    left:-450px;
-    background-color:rgb(185, 33, 59);
-    transition: left 0.3s ease;
-    z-index:-2;
-    padding-top:250px;    
-}
-.sidebar ul{
-    list-style-type: none;
-    padding: 0;
-}
-.sidebar ul li{
-    padding:15px;
-    text-align:center;
-}
-.sidebar ul li a {
-    font-size: 22px;
-    font-weight: 500;
-    text-decoration: none;
-    color:white;
-}
-.sidebar ul li:hover {
-   scale: 1.1;
-}
-.content {
-    padding: 20px;
-    transition: margin-left 0.3s ease;
-}
-.main-container{
-    background-image: url(background-image.jpg);
-    background-size: cover;
-    background-position: center; 
-    height:auto;
-    border-radius: 10px;
-    margin-top: 10px;
-    padding: 4px;
- }
-.main-container h1{
-    color: wheat;
-    font-size:25px;
-    text-align: center;
-    margin-bottom:100px;
-    padding-top:40px ;
-}
-.chat-container {
-    width:100%;
-    height: 600px;
-    background:transparent;
-    border-radius: 10px;
-    display: flex;
-    margin-right: 20px;
-    flex-direction: column;
-    overflow: hidden;
-}
-.chat-box {
-    flex:1;
-    padding: 10px;
-    overflow-y: auto;
-    color: white;
-}
-#user-message{
-    width: auto;
-    height: auto;
-    margin-bottom: 10px;
-    display: flex;
-    justify-content:right;
-    align-items:center;
-
-}
-#user-message p{
-    background-color: rgba(16, 16, 15, 0.098);
-    border-radius: 15px;
-    padding:10px 10px;
-}
-#user-message i{
-    font-size:26px;
-    color:black;
-    margin-left:10px;
-  }
-#chatbot-message{
-    width: auto;
-    height: auto;
-    margin-bottom:10px;
-    display:flex;
-    justify-content:left;
-    align-items:center;
-}
-#chatbot-message i{
-    font-size:26px;
-    color:rgb(19, 62, 193);
-    margin-right:10px;
+@media only screen and (max-width:600px){
+    body{
+        display: flex;
+        flex-direction: column;
+        background-color:rgb(185, 33, 59) ;
+        padding: 4px;
+     }
+    header{
+        height:8vh;
+        background-color:rgba(0, 0, 0, 0.619);
+        border-radius: 10px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 15px;
+        z-index:1;
+    }
+    header i{
+       font-size:35px;
+       color: white;
+       cursor: pointer;
+    }
+    header i:hover{
+        scale: 1.1;
+    }
+    .menu-toggle {
+        font-size: 30px;
+        cursor: pointer;
+        padding: 10px;
+        background-color: #333;
+        position: absolute;
+        top: 10px;
+        left: 10px; 
+    }
+    .sidebar{
+        height: auto;
+        width:100%;
+        position:absolute;
+        left:-450px;
+        background-color:rgb(185, 33, 59);
+        transition: left 0.3s ease;
+        z-index:-2;
+        padding-top:250px;    
+    }
+    .sidebar ul{
+        list-style-type: none;
+        padding: 0;
+    }
+    .sidebar ul li{
+        padding:15px;
+        text-align:center;
+    }
+    .sidebar ul li a {
+        font-size: 22px;
+        font-weight: 500;
+        text-decoration: none;
+        color:white;
+    }
+    .sidebar ul li:hover {
+       scale: 1.1;
+    }
+    .content {
+        padding: 20px;
+        transition: margin-left 0.3s ease;
+    }
+    .main-container{
+        background-image: url(background-image.jpg);
+        background-size: cover;
+        background-position: center; 
+        height:auto;
+        border-radius: 10px;
+        margin-top: 10px;
+        padding: 4px;
+     }
+    .main-container h1{
+        color: wheat;
+        font-size:25px;
+        text-align: center;
+        margin-bottom:100px;
+        padding-top:40px ;
+    }
+    .chat-container {
+        width:100%;
+        height: 600px;
+        background:transparent;
+        border-radius: 10px;
+        display: flex;
+        margin-right: 20px;
+        flex-direction: column;
+        overflow: hidden;
+    }
+    .chat-box {
+        flex:1;
+        padding: 10px;
+        overflow-y: auto;
+        color: white;
+    }
+    #user-message{
+        width: auto;
+        height: auto;
+        margin-bottom: 10px;
+        display: flex;
+        justify-content:right;
+        align-items:center;
     
-}
-#chatbot-message p{
-    background-color: rgba(16, 16, 15, 0.098);
-    border-radius:15px;
-    padding:10px 10px;
-}
-#loading{
-    width: auto;
-    height: auto;
-    margin-bottom:10px;
-    display:flex;
-    justify-content:left;
-    align-items:center;
-}
-#loading i{
-    font-size:25px;
-    color:rgb(19, 62, 193);
-    margin-right:10px;
-    
-}
-#loading p{
-    background-color:rgba(16, 16, 15, 0.273);
-    border-radius:15px;
-    padding:4px;
-}
-.input-box{
-    display: flex;
-    padding: 5px;
-    background:rgba(16, 16, 15, 0.273);
-    justify-content:space-around;
-    align-items: center;
-    border-radius:10px ;
-}
-.input-box i{
-    font-size: 25px;
-    padding:15px;
-    color:black;
-}
-input{
-    flex:1;
-    height:6vh;
-    padding: 10px;
-    border:0.5px solid gray;
-    outline: none;
-    border-radius:10px;
-}
-button {
-    width:70px;
-    margin-left: 2px;
-    padding: 5px 10px;
-    border: none;
-    background:rgb(27, 215, 42);
-    color: white;
-    border-radius: 5px;
-    height:6vh;
-}
-footer {
-    height: 15vh;
-    margin-top:5px;
-    background-color:rgba(0, 0, 0, 0.619);
-    color: #fff;
-    border-radius: 10px;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.footer-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.footer-social ul{
-    display: flex;
-    justify-content: space-around;
-}
-.footer-social h4{
-    text-align: center;
-    color:white;
-    margin-bottom: 10px;
-}
-.footer-social ul li {
-    list-style: none;
-    margin-right:10px ;
-}
-.footer-social ul li a{
-    text-decoration: none;
-    color: wheat;
-}
-.footer-social ul li a:hover{
-    border-bottom: 1px solid cyan;
-} 
-.footer-bottom p{
-    font-size: 10px;
-    margin-top:25px;
-    text-align: center;
+    }
+    #user-message p{
+        background-color: rgba(16, 16, 15, 0.098);
+        border-radius: 15px;
+        padding:10px 10px;
+    }
+    #user-message i{
+        font-size:26px;
+        color:black;
+        margin-left:10px;
+      }
+    #chatbot-message{
+        width: auto;
+        height: auto;
+        margin-bottom:10px;
+        display:flex;
+        justify-content:left;
+        align-items:center;
+    }
+    #chatbot-message i{
+        font-size:26px;
+        color:rgb(19, 62, 193);
+        margin-right:10px;
+        
+    }
+    #chatbot-message p{
+        background-color: rgba(16, 16, 15, 0.098);
+        border-radius:15px;
+        padding:10px 10px;
+    }
+    #loading{
+        width: auto;
+        height: auto;
+        margin-bottom:10px;
+        display:flex;
+        justify-content:left;
+        align-items:center;
+    }
+    #loading i{
+        font-size:25px;
+        color:rgb(19, 62, 193);
+        margin-right:10px;
+        
+    }
+    #loading p{
+        background-color:rgba(16, 16, 15, 0.273);
+        border-radius:15px;
+        padding:4px;
+    }
+    .input-box{
+        display: flex;
+        padding: 5px;
+        background:rgba(16, 16, 15, 0.273);
+        justify-content:space-around;
+        align-items: center;
+        border-radius:10px ;
+    }
+    .input-box i{
+        font-size: 25px;
+        padding:15px;
+        color:black;
+    }
+    input{
+        flex:1;
+        height:6vh;
+        padding: 10px;
+        border:0.5px solid gray;
+        outline: none;
+        border-radius:10px;
+    }
+    button {
+        width:70px;
+        margin-left: 2px;
+        padding: 5px 10px;
+        border: none;
+        background:rgb(27, 215, 42);
+        color: white;
+        border-radius: 5px;
+        height:6vh;
+    }
+    footer {
+        height: 15vh;
+        margin-top:5px;
+        background-color:rgba(0, 0, 0, 0.619);
+        color: #fff;
+        border-radius: 10px;
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .footer-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .footer-social ul{
+        display: flex;
+        justify-content: space-around;
+    }
+    .footer-social h4{
+        text-align: center;
+        color:white;
+        margin-bottom: 10px;
+    }
+    .footer-social ul li {
+        list-style: none;
+        margin-right:10px ;
+    }
+    .footer-social ul li a{
+        text-decoration: none;
+        color: wheat;
+    }
+    .footer-social ul li a:hover{
+        border-bottom: 1px solid cyan;
+    } 
+    .footer-bottom p{
+        font-size: 10px;
+        margin-top:25px;
+        text-align: center;
+    }
 }
