--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 ::-webkit-scrollbar{
     scrollbar-width: none;
 }
-    body{
+    /* body{
         display: flex;
         flex-direction: column;
         background-color:rgb(185, 33, 59) ;
@@ -252,7 +252,7 @@
         font-size: 10px;
         margin-top:25px;
         text-align: center;
-    }
+    } */
 /* for mobile */
 @media only screen and (max-width:400px){
     body{
