--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 ::-webkit-scrollbar{
     scrollbar-width: none;
 }
-    /* body{
+    body{
         display: flex;
         flex-direction: column;
         background-color:rgb(185, 33, 59) ;
@@ -60,9 +60,11 @@
         text-align: center;
     }
     
-    .sidebar ul {
+    .sidebar option{
         list-style-type: none;
         padding: 0;
+        display: block;
+        transition: all 0.5s;
     }
     
     .sidebar ul li {
@@ -77,12 +79,33 @@
     }
     
     .sidebar ul li:hover {
-       scale: 1.1;
+        border-right:3px solid cyan;
+        border-radius: 5px;
+        box-shadow: inset 2px 2px 50px 2px cyan ;
     }
-    
     .content {
         padding: 20px;
         transition: margin-left 0.3s ease;
+    }
+    #speakmode-checkbox{
+        display:none;
+        font-size:15px;
+        list-style-type: none;
+    }
+    #speakmode-checkbox li{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    #speakmode-checkbox input{
+        border:none;
+        outline: none;
+        width:17px;
+        height:17px; 
+        transition: all 0.5s;
+    }
+    #speakmode-checkbox input:hover{
+        cursor: pointer;
     }
      .main-container{
         background-image: url(background-image.jpg);
@@ -252,8 +275,7 @@
         font-size: 10px;
         margin-top:25px;
         text-align: center;
-    } */
-/* for mobile */
+    } 
 @media only screen and (max-width:600px){
     body{
         display: flex;
