--- a/style.css
+++ b/style.css
@@ -1,507 +1,296 @@
-*{
+/* General Styles */
+* {
     margin: 0;
     padding: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     box-sizing: border-box;
 }
-::-webkit-scrollbar{
-    scrollbar-width: none;
+
+::-webkit-scrollbar {
+    display: none;
 }
-    body{
-        display: flex;
-        flex-direction: column;
-        background-color:rgb(185, 33, 59) ;
-        padding: 4px;
+
+body {
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(185, 33, 59);
+    width: 100%;
+    height: 100vh;
+}
+
+/* Header */
+header {
+    height:15vh;
+    background-color:rgb(185, 33, 59);
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px;
+    z-index:11;
+    position:sticky;
+    top: 0;
+}
+
+header i {
+    font-size: 25px;
+    color: white;
+    cursor: pointer;
+}
+
+/* Sidebar Navigation */
+.menu-toggle {
+    font-size: 30px;
+    cursor: pointer;
+    padding: 10px;
+    background-color: #333;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index:10;
+}
+.sidebar {
+    position: fixed;
+    top: 0;
+    left: -200px;
+    width: 200px;
+    height: 100%;
+    background: rgb(185, 33, 59);
+    transition: left 0.3s ease;
+    padding-top: 70px;
+    color: white;
+    font-size: 15px;
+    z-index:-1;
+}
+.sidebar ul li {
+    padding: 15px;
+    margin-left: 20px;
+    text-align: left;
+    list-style: none;
+}
+.sidebar ul li a {
+    color: white;
+    text-decoration: none;
+    display: block;
+}
+.sidebar ul li:hover{
+   cursor: pointer;
+}
+#speakmode-checkbox{
+    display: none;
+}
+#speakmode-checkbox li{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+#speakmode-checkbox input{
+    height:20px;
+    width: 20px;
+    margin-left: 5px;
+}
+/* Main Container */
+.main-container {
+    background-image: url(background-image.jpg);
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    border-radius: 10px;
+    margin: 15px 0px 15px 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+}
+
+.main-container h1 {
+    color:rgb(231, 236, 237);
+    font-size: 10px;
+    font-weight: 200;
+    text-align: center;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+/* Chat Container */
+.chat-container {
+    width: 100%;
+    max-width: 500px;
+    height: 70vh;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    margin: 20px auto;
+}
+
+.chat-box {
+    flex: 1;
+    padding: 10px;
+    overflow-y: auto;
+    border-bottom: 1px solid #ddd;
+    font-size: 12px;
+}
+#user-message{
+    display: flex;
+    justify-content:right;
+    align-items: center;
+    border-radius:10px;
+    padding: 10px;
+    margin: 10px;
+}
+#user-message p{
+    background-color: #c9c2c2b3;
+    padding:7px;
+    border-radius: 10px;
+}
+#loading{
+    display: flex;
+    justify-content:left;
+    align-items: center;
+    border-radius:10px;
+    padding: 10px;
+    margin: 10px;
+}
+#loading p{
+    background-color: #c9c2c2b3;
+    padding:7px;
+    border-radius: 10px;
+}
+#loading i{
+    color: rgb(224, 25, 105);
+    margin-right:10px;
+    
+}
+#chatbot-message{
+    display: flex;
+    justify-content:left;
+    align-items: center;
+    border-radius:10px;
+    padding: 10px;
+    margin: 10px;
+    max-width: 90%;
+}
+#chatbot-message i{
+    color: rgb(224, 25, 105);
+    margin-right:10px;
+}
+#chatbot-message p{
+         background-color: #c9c2c2b3;
+         padding:7px;
+         border-radius: 10px;
+}
+.input-box {
+    display: flex;
+    padding: 10px;
+    background: #eee;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.input-box i{
+    color: rgb(224, 25, 105);
+    font-size: 20px;
+    margin-right: 10px;
+    padding: 5px;
+    transition: all 0.2s;
+    
+}
+.input-box i:hover{
+    cursor: pointer;
+    scale: 1.1;  
+}
+.input-box input{
+    flex: 1;
+    padding: 10px;
+    border: 1px solid gray;
+    outline: none;
+    border-radius: 10px;
+    margin-right: 5px;
+}
+button {
+    padding: 10px 15px;
+    border: none;
+    background: rgb(185, 33, 59);
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color:#4cae4c;
+}
+
+/* Footer */
+footer {
+    height: auto;
+    background-color:transparent;
+    color: #fff;
+    border-radius: 10px;
+    padding: 20px;
+    text-align: center;
+}
+.footer-social ul {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+.footer-social ul li {
+    list-style: none;
+}
+
+.footer-social ul li a {
+    text-decoration: none;
+    color: wheat;
+}
+
+.footer-social ul li a:hover {
+    border-bottom: 1px solid cyan;
+}
+
+.footer-bottom p {
+    font-size: 12px;
+    margin-top: 15px;
+}
+
+/* Responsive Design */
+@media screen and (max-width: 768px) {
+    .sidebar {
+        width: 150px;
+    }
+
+    .chat-container {
+        width: 90%;
+    }
+
+    .main-container {
+        height: auto;
+    }
+
+    .input-box input {
         width: 100%;
-     }
-    header{
-        height:10vh;
-        background-color:rgba(0, 0, 0, 0.619);
-        border-radius: 10px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 15px;
     }
-    header i{
-       font-size: 25px;
-       color: white;
-       cursor: pointer;
-    }
-    header i:hover{
-        scale: 1.1;
-    }
-    .menu-toggle {
-        font-size: 30px;
-        cursor: pointer;
-        padding: 10px;
-        background-color: #333;
-        position: absolute;
-        top: 10px;
-        left: 10px;
-        z-index: 1000;
-    }
-    .sidebar{
-        height: 95%;
-        width: 140px;
-        position:absolute;
-        top:60px;
-        left: -200px;
-        background-color:transparent;
-        transition: left 0.3s ease;
-        padding-top: 10px;
-        color: white;
-        color:black;
-        border-top-right-radius:10px;
-    }
-    
-    .sidebar h2 {
-        color: white;
-        text-align: center;
-    }
-    
-    .sidebar option{
-        list-style-type: none;
-        padding: 0;
-        display: block;
-        transition: all 0.5s;
-    }
-    
-    .sidebar ul li {
-        padding:15px;
-        text-align: center;
-    }
-    
-    .sidebar ul li a {
-        color: white;
-        text-decoration: none;
-        display: block;
-    }
-    
-    .sidebar ul li:hover {
-        border-right:3px solid cyan;
-        border-radius: 5px;
-        box-shadow: inset 2px 2px 50px 2px cyan ;
-    }
-    .content {
+}
+
+@media screen and (max-width: 480px) {
+    header {
+        height: auto;
         padding: 20px;
-        transition: margin-left 0.3s ease;
     }
-    #speakmode-checkbox{
-        display:none;
-        font-size:15px;
-        list-style-type: none;
-    }
-    #speakmode-checkbox li{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    #speakmode-checkbox input{
-        border:none;
-        outline: none;
-        width:17px;
-        height:17px; 
-        transition: all 0.5s;
-    }
-    #speakmode-checkbox input:hover{
-        cursor: pointer;
-    }
-     .main-container{
-        background-image: url(background-image.jpg);
-        background-size: cover;
-        background-position: center; 
-        height: 150vh;
-        width: 100%;
-        border-radius: 10px;
-        margin-top: 10px;
-        display:flex;
-        justify-content: right;
-        align-items:center;
-     }
-    .main-container h1{
-        width: 50%;
-        color: wheat;
-        font-size:20px;
-        justify-self: right;
+    header i {
+        font-size: 35px;
     }
     .chat-container {
-        width:40%;
-        height: 400px;
-        background:white;
-        border-radius: 10px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        display: flex;
-        margin-right: 20px;
+        width: 100%;
+        height: 60vh;
+    }
+
+    .input-box {
         flex-direction: column;
-        overflow: hidden;
-    }
-    .chat-box {
-        flex:1;
-        padding: 10px;
-        overflow-y: auto;
-        border-bottom: 1px solid #ddd;
-    }
-    #user-message{
-        width: auto;
-        height: auto;
-        margin-bottom: 10px;
-        display: flex;
-        justify-content:right;
-        align-items:center;
-    
-    }
-    #user-message p{
-        background-color: rgba(16, 16, 15, 0.099);
-        border-radius: 15px;
-        padding: 5px;
-    }
-    #user-message i{
-        font-size:26px;
-        color:rgb(185, 33, 59);
-        margin-left:10px;
-      }
-    #chatbot-message{
-        width: auto;
-        height: auto;
-        margin-bottom:10px;
-        display:flex;
-        justify-content:left;
-        align-items:center;
-    }
-    #chatbot-message i{
-        font-size:26px;
-        color:rgb(19, 62, 193);
-        margin-right:10px; 
-    }
-    #chatbot-message p{
-        background-color:rgba(16, 16, 15, 0.099);
-        border-radius:15px;
-        padding:5px;
-    }
-    #loading{
-        width: auto;
-        height: auto;
-        margin-bottom:10px;
-        display:flex;
-        justify-content:left;
-        align-items:center;
-    }
-    #loading i{
-        font-size:25px;
-        color:rgb(19, 62, 193);
-        margin-right:10px;
-        
-    }
-    #loading p{
-        background-color:rgba(16, 16, 15, 0.273);
-        border-radius:15px;
-        padding:4px;
-    }
-    .input-box{
-        display: flex;
-        padding: 10px;
-        background: #eee;
-        justify-content:space-around;
-        align-items: center;
-    }
-    .input-box i{
-        font-size: 25px;
-        padding: 10px;
-        cursor: pointer;
-        color: gray;
-    }
-    .input-box i:hover{
-        scale: 1.1;
-        transition: linear all;
-       color: black;
-    }
-    input{
-        flex:1;
-        height:9vh;
-        padding: 10px;
-        border:0.5px solid gray;
-        outline: none;
-        border-radius:10px;
+        gap: 10px;
     }
     button {
-        margin-left: 5px;
-        padding: 5px 10px;
-        border: none;
-        background:rgb(185, 33, 59);
-        color: white;
-        border-radius: 5px;
-        cursor: pointer;
-        height:9vh;
-    } 
-    button:hover {
-        background-color: #4cae4c;
-    }
-    footer {
-        height: 25vh;
-        margin-top:10px;
-        background-color:rgba(0, 0, 0, 0.619);
-        color: #fff;
-        border-radius: 10px;
-        padding: 10px;
-    }
-    .footer-container {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    .footer-social ul{
-        display: flex;
-        justify-content: space-around;
-    }
-    .footer-social h4{
-        text-align: center;
-        color:white;
-        margin-bottom: 10px;
-    }
-    .footer-social ul li {
-        list-style: none;
-        margin-right:10px ;
-    }
-    .footer-social ul li a{
-        text-decoration: none;
-        color: wheat;
-    }
-    .footer-social ul li a:hover{
-        border-bottom: 1px solid cyan;
-    } 
-    .footer-bottom p{
-        font-size: 10px;
-        margin-top:25px;
-        text-align: center;
-    } 
-@media only screen and (max-width:600px){
-    body{
-        display: flex;
-        flex-direction: column;
-        background-color:rgb(185, 33, 59) ;
-        padding: 4px;
-     }
-    header{
-        height:8vh;
-        background-color:rgba(0, 0, 0, 0.619);
-        border-radius: 10px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 15px;
-        z-index:1;
-    }
-    header i{
-       font-size:35px;
-       color: white;
-       cursor: pointer;
-    }
-    header i:hover{
-        scale: 1.1;
-    }
-    .menu-toggle {
-        font-size: 30px;
-        cursor: pointer;
-        padding: 10px;
-        background-color: #333;
-        position: absolute;
-        top: 10px;
-        left: 10px; 
-    }
-    .sidebar{
-        height: auto;
-        width:100%;
-        position:absolute;
-        left:-450px;
-        background-color:rgb(185, 33, 59);
-        transition: left 0.3s ease;
-        z-index:-2;
-        padding-top:250px;    
-    }
-    .sidebar ul{
-        list-style-type: none;
-        padding: 0;
-    }
-    .sidebar ul li{
-        padding:15px;
-        text-align:center;
-    }
-    .sidebar ul li a {
-        font-size: 22px;
-        font-weight: 500;
-        text-decoration: none;
-        color:white;
-    }
-    .sidebar ul li:hover {
-       scale: 1.1;
-    }
-    .content {
-        padding: 20px;
-        transition: margin-left 0.3s ease;
-    }
-    .main-container{
-        background-image: url(background-image.jpg);
-        background-size: cover;
-        background-position: center; 
-        height:auto;
-        border-radius: 10px;
-        margin-top: 10px;
-        padding: 4px;
-     }
-    .main-container h1{
-        color: wheat;
-        font-size:25px;
-        text-align: center;
-        margin-bottom:100px;
-        padding-top:40px ;
-    }
-    .chat-container {
-        width:100%;
-        height: 600px;
-        background:transparent;
-        border-radius: 10px;
-        display: flex;
-        margin-right: 20px;
-        flex-direction: column;
-        overflow: hidden;
-    }
-    .chat-box {
-        flex:1;
-        padding: 10px;
-        overflow-y: auto;
-        color: white;
-    }
-    #user-message{
-        width: auto;
-        height: auto;
-        margin-bottom: 10px;
-        display: flex;
-        justify-content:right;
-        align-items:center;
-    
-    }
-    #user-message p{
-        background-color: rgba(16, 16, 15, 0.098);
-        border-radius: 15px;
-        padding:10px 10px;
-    }
-    #user-message i{
-        font-size:26px;
-        color:black;
-        margin-left:10px;
-      }
-    #chatbot-message{
-        width: auto;
-        height: auto;
-        margin-bottom:10px;
-        display:flex;
-        justify-content:left;
-        align-items:center;
-    }
-    #chatbot-message i{
-        font-size:26px;
-        color:rgb(19, 62, 193);
-        margin-right:10px;
-        
-    }
-    #chatbot-message p{
-        background-color: rgba(16, 16, 15, 0.098);
-        border-radius:15px;
-        padding:10px 10px;
-    }
-    #loading{
-        width: auto;
-        height: auto;
-        margin-bottom:10px;
-        display:flex;
-        justify-content:left;
-        align-items:center;
-    }
-    #loading i{
-        font-size:25px;
-        color:rgb(19, 62, 193);
-        margin-right:10px;
-        
-    }
-    #loading p{
-        background-color:rgba(16, 16, 15, 0.273);
-        border-radius:15px;
-        padding:4px;
-    }
-    .input-box{
-        display: flex;
-        padding: 5px;
-        background:rgba(16, 16, 15, 0.273);
-        justify-content:space-around;
-        align-items: center;
-        border-radius:10px ;
-    }
-    .input-box i{
-        font-size: 25px;
-        padding:15px;
-        color:black;
-    }
-    input{
-        flex:1;
-        height:6vh;
-        padding: 10px;
-        border:0.5px solid gray;
-        outline: none;
-        border-radius:10px;
-    }
-    button {
-        width:70px;
-        margin-left: 2px;
-        padding: 5px 10px;
-        border: none;
-        background:rgb(27, 215, 42);
-        color: white;
-        border-radius: 5px;
-        height:6vh;
-    }
-    footer {
-        height: 15vh;
-        margin-top:5px;
-        background-color:rgba(0, 0, 0, 0.619);
-        color: #fff;
-        border-radius: 10px;
-        padding: 10px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    .footer-container {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    .footer-social ul{
-        display: flex;
-        justify-content: space-around;
-    }
-    .footer-social h4{
-        text-align: center;
-        color:white;
-        margin-bottom: 10px;
-    }
-    .footer-social ul li {
-        list-style: none;
-        margin-right:10px ;
-    }
-    .footer-social ul li a{
-        text-decoration: none;
-        color: wheat;
-    }
-    .footer-social ul li a:hover{
-        border-bottom: 1px solid cyan;
-    } 
-    .footer-bottom p{
-        font-size: 10px;
-        margin-top:25px;
-        text-align: center;
+        width: 100%;
     }
 }
