--- a/style.css
+++ b/style.css
@@ -121,15 +121,15 @@ header i {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: column;
-    overflow: hidden;
+    overflow:hidden;
     margin: 20px auto;
 }
 .chat-box {
     flex: 1;
-    padding: 10px;
-    overflow-y:auto;
+    padding:5px;
     border-bottom: 1px solid #ddd;
     font-size: 12px;
+    overflow-y: scroll;
 }
 #user-message{
     display: flex;
@@ -153,7 +153,7 @@ header i {
     padding: 10px;
     margin: 10px;
 }
-#loading pre{
+#loading p{
     background-color:black;
     padding:7px;
     border-radius: 10px;
@@ -162,7 +162,7 @@ header i {
 #loading i{
     color: rgb(224, 25, 105);
     margin-right:10px;
-    padding: 10px;
+    padding-top: 5px;
     font-size:20px; 
 }
 #chatbot-message{
@@ -171,20 +171,20 @@ header i {
     border-radius:10px;
     padding: 10px;
     margin: 10px;
-    max-width: 90%;
+    max-width: 100%;
 }
 #chatbot-message i{
     color: rgb(224, 25, 105);
     margin-right:10px;
-    padding: 10px;
+    padding-top:5px;
     font-size:20px;
 }
-#chatbot-message pre{
+#chatbot-message p{
          padding:7px;
          border-radius: 10px;
          background-color:black;
-        color: white;
-        overflow-y:scroll;
+         color: white;
+         width: 100%;
 }
 .input-box {
     display: flex;
@@ -289,7 +289,6 @@ footer {
         width: 100%;
         height: 60vh;
     }
-
     .input-box {
         flex-direction: column;
         gap: 10px;
