added new style and feature

--- a/style.css
+++ b/style.css
@@ -1,303 +1,283 @@
 /* General Styles */
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  box-sizing: border-box;
 }
 
 ::-webkit-scrollbar {
-    display: none;
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 20px;
+}
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(185, 33, 59);
-    width: 100%;
-    height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: rgb(33, 33, 33);
+  width: 100%;
+  height: 100vh;
 }
-
 /* Header */
 header {
-    height:15vh;
-    background-color:rgb(185, 33, 59);
-    border-radius: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px;
-    z-index:11;
-    position:sticky;
-    top: 0;
+  background-color: rgb(33, 33, 33);
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  z-index: 11;
+  position: sticky;
+  top: 0;
 }
-
 header i {
-    font-size: 25px;
-    color: white;
-    cursor: pointer;
+  font-size: 25px;
+  color: rgb(246, 241, 241);
+  cursor: pointer;
 }
-
+header .login-section {
+  display: flex;
+  gap: 10px;
+}
+header .login-section a {
+  text-decoration: none;
+  color: white;
+}
+header .login{
+  background-color: white;
+  padding: 5px 8px 5px 8px;
+  font-size: 20px;
+  border-radius: 20px;
+  text-align: center;
+  cursor: pointer;
+}
+header .login a{
+  color: black;
+}
+header .signup {
+  background-color: rgb(48, 39, 27);
+  padding: 5px 8px 5px 8px;
+  font-size: 20px;
+  border-radius: 20px;
+  text-align: center;
+  border: 2px solid rgb(48, 39, 27);
+}
+header .signup:hover {
+  background-color: transparent;
+  color: white;
+  cursor: pointer;
+}
 /* Sidebar Navigation */
-.menu-toggle {
-    font-size: 30px;
-    cursor: pointer;
-    padding: 10px;
-    background-color: #333;
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    z-index:10;
-}
 .sidebar {
-    position: fixed;
-    top: 0;
-    left: -200px;
-    width: 200px;
-    height: 100%;
-    background: rgb(185, 33, 59);
-    transition: left 0.3s ease;
-    padding-top: 70px;
-    color: white;
-    font-size: 15px;
-    z-index:-1;
+  position: fixed;
+  top: 0;
+  left: -200px;
+  width: 150px;
+  height: 100%;
+  background-color: rgb(33, 33, 33);
+  transition: left 0.3s ease;
+  padding-top: 70px;
+  color: white;
+  font-size: 20px;
+  z-index: -1;
 }
 .sidebar ul li {
-    padding: 15px;
-    margin-left: 20px;
-    text-align: left;
-    list-style: none;
+  padding: 15px;
+  margin-left: 20px;
+  text-align: left;
+  list-style: none;
 }
 .sidebar ul li a {
-    color: white;
-    text-decoration: none;
-    display: block;
+  color: white;
+  text-decoration: none;
+  display: block;
 }
-.sidebar ul li:hover{
-   cursor: pointer;
-}
-#speakmode-checkbox{
-    display: none;
-}
-#speakmode-checkbox li{
-   display: flex;
-   justify-content: center;
-   align-items: center;
-}
-#speakmode-checkbox input{
-    height:20px;
-    width: 20px;
-    margin-left: 5px;
+.sidebar ul li:hover {
+  cursor: pointer;
 }
 /* Main Container */
 .main-container {
-    background-image: url(background-image.jpg);
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    border-radius: 10px;
-    margin: 15px 0px 15px 0px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
+  height: 80%;
+  background-color: rgb(33, 33, 33);
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
 }
-
-.main-container h1 {
-    color:rgb(231, 236, 237);
-    font-size: 10px;
-    font-weight: 200;
-    text-align: center;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+.main-container .chatbot-label {
+  color: white;
 }
 /* Chat Container */
 .chat-container {
-    width: 100%;
-    max-width: 500px;
-    height: 70vh;
-    background: white;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    display: flex;
-    flex-direction: column;
-    overflow:hidden;
-    margin: 20px auto;
+  width: 70%;
+  background: transparent;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
 .chat-box {
-    flex: 1;
-    padding:5px;
-    border-bottom: 1px solid #ddd;
-    font-size: 12px;
-    overflow-y: scroll;
+  max-height: 100% auto;
+  flex: 1;
+  overflow-y: scroll;
 }
-#user-message{
-    display: flex;
-    justify-content:right;
-    align-items: center;
-    border-radius:10px;
-    padding: 10px;
-    margin: 10px;
+#user-message {
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px;
 }
-#user-message p{
-    background-color: #c9c2c2b3;
-    padding:7px;
-    border-radius: 10px;
-    color: black;
+#user-message p {
+  background-color: rgb(48, 48, 48);
+  padding: 7px;
+  border-radius: 10px;
+  color: white;
+  font-size: 15px;
 }
-#loading{
-    display: flex;
-    justify-content:left;
-    align-items: center;
-    border-radius:10px;
-    padding: 10px;
-    margin: 10px;
+#loading {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px;
 }
-#loading p{
-    background-color:black;
-    padding:7px;
-    border-radius: 10px;
-    color: cyan;
+#loading pre {
+  padding: 7px;
+  border-radius: 10px;
+  color: cyan;
 }
-#loading i{
-    color: rgb(224, 25, 105);
-    margin-right:10px;
-    padding-top: 5px;
-    font-size:20px; 
+#chatbot-message {
+  display: flex;
+  justify-content: left;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px;
+  max-width: 100%;
 }
-#chatbot-message{
-    display: flex;
-    justify-content:left;
-    border-radius:10px;
-    padding: 10px;
-    margin: 10px;
-    max-width: 100%;
+#chatbot-message pre {
+  max-width: 100% auto;
+  padding: 7px;
+  border-radius: 10px;
+  background-color: transparent;
+  color: white;
+  word-wrap: break-word;
+  white-space: pre-wrap;
+  line-height: 1.6;
+  word-spacing: 0.5px;
+  text-align: left;
+  font-size: 15px;
 }
-#chatbot-message i{
-    color: rgb(224, 25, 105);
-    margin-right:10px;
-    padding-top:2px;
-    font-size:20px;
+.input-box{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding:10px;
+  background-color: rgb(48, 48, 48);
+  border-radius:50px;
+  height:20vh;
 }
-#chatbot-message p{
-         padding:7px;
-         border-radius:10px;
-         background-color:black;
-         color: white;
-         width: 100%;
+.input-box i {
+  color: white;
+  font-size: 20px;
+  margin-right: 10px;
+  padding: 5px;
+  transition: all 0.2s;
 }
-.input-box {
-    display: flex;
-    padding: 10px;
-    background: #eee;
-    align-items: center;
-    justify-content: space-between;
+.input-box i:hover {
+  cursor: pointer;
+  scale: 1.1;
 }
-.input-box i{
-    color: rgb(224, 25, 105);
-    font-size: 20px;
-    margin-right: 10px;
-    padding: 5px;
-    transition: all 0.2s;
-    
+.input-box input {
+  flex: 1;
+  padding: 10px;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  margin-right: 5px;
+  background-color: transparent;
+  font-size: 15px;
+  color: white;
 }
-.input-box i:hover{
-    cursor: pointer;
-    scale: 1.1;  
+#SendBtn i {
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 30px;
 }
-.input-box input{
-    flex: 1;
-    padding: 10px;
-    border: 1px solid gray;
-    outline: none;
-    border-radius: 10px;
-    margin-right: 5px;
-}
-button {
-    padding: 10px 15px;
-    border: none;
-    background: rgb(185, 33, 59);
-    color: white;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color:#4cae4c;
-}
-
 /* Footer */
 footer {
-    height: auto;
-    background-color:transparent;
-    color: #fff;
-    border-radius: 10px;
-    padding: 20px;
-    text-align: center;
+  height: 5vh;
+  background-color: transparent;
+  text-align: center;
 }
-.footer-social ul {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-}
-.footer-social ul li {
-    list-style: none;
-}
-
-.footer-social ul li a {
-    text-decoration: none;
-    color: wheat;
-}
-
-.footer-social ul li a:hover {
-    border-bottom: 1px solid cyan;
-}
-
 .footer-bottom p {
-    font-size: 12px;
-    margin-top: 15px;
+  font-size: 10px;
+  color: white;
 }
 
 /* Responsive Design */
 @media screen and (max-width: 768px) {
-    .sidebar {
-        width: 150px;
-    }
-
-    .chat-container {
-        width: 90%;
-    }
-
-    .main-container {
-        height: auto;
-    }
-
-    .input-box input {
-        width: 100%;
-    }
+  .sidebar {
+    width:150px;
+    font-size: 15px;
+  }
+  .chat-container {
+    max-height:80vh auto;
+  }
+  .main-container {
+    height:100%;
+  }
+  .input-box input {
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 480px) {
-    header {
-        height: auto;
-        padding: 20px;
-    }
-    header i {
-        font-size: 35px;
-    }
-    .chat-container {
-        width: 100%;
-        height: 60vh;
-    }
-    .input-box {
-        flex-direction: row;
-        gap:2px;
-        width: 100%;
-    }
-    .input-box input{
-        width: 80%;
-    }
-    button {
-        width: 20%;
-    }
+  ::-webkit-scrollbar {
+    width: 2px;
+  }
+  header {
+    padding: 20px;
+  }
+  header i {
+    font-size: 35px;
+  }
+  .chat-container {
+    width:100%;
+    max-height:80vh auto;
+    padding:10px;
+  }
+  .input-box{
+    border-radius:70px;
+    display:flex;
+    flex-direction:row;
+    width:100%;
+    height:10vh;
+  }
+  #speech{
+    display: none;
+  }
+  .input-box input{
+    width: 100%;
+  }
+  #SendBtn i {
+    font-size:40px;
+  }
 }
