--- a/LoginPage.css
+++ b/LoginPage.css
@@ -1,19 +1,118 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color:rgb(185, 33, 59) ;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+/* General Styles */
+* {
     margin: 0;
-}
-
+    padding: 0;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    box-sizing: border-box;
+  }
+  
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+  ::-webkit-scrollbar-track {
+    background: transparent;
+    border-radius: 20px;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 5px;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+  body {
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+    background-color: rgb(33, 33, 33);
+    width:100%;
+    height:100vh;
+  }
+  /* Header */
+header {
+    background-color: rgb(33, 33, 33);
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    z-index: 11;
+    position: sticky;
+    top: 0;
+  }
+  header i {
+    font-size: 25px;
+    color: rgb(246, 241, 241);
+    cursor: pointer;
+  }
+  header .login-section {
+    display: flex;
+    gap: 10px;
+  }
+  header .login-section a {
+    text-decoration: none;
+    color: white;
+  }
+  header .login{
+    background-color: white;
+    padding: 5px 8px 5px 8px;
+    font-size: 20px;
+    border-radius: 20px;
+    text-align: center;
+    cursor: pointer;
+  }
+  header .login a{
+    color: black;
+  }
+  header .signup {
+    background-color: rgb(48, 39, 27);
+    padding: 5px 8px 5px 8px;
+    font-size: 20px;
+    border-radius: 20px;
+    text-align: center;
+    border: 2px solid rgb(48, 39, 27);
+  }
+  header .signup:hover {
+    background-color: transparent;
+    color: white;
+    cursor: pointer;
+  }
+  /* Sidebar Navigation */
+  .sidebar {
+    position: fixed;
+    top: 0;
+    left: -200px;
+    width: 150px;
+    height: 100%;
+    background-color: rgb(33, 33, 33);
+    transition: left 0.3s ease;
+    padding-top: 70px;
+    color: white;
+    font-size: 20px;
+    z-index: -1;
+  }
+  .sidebar ul li {
+    padding: 15px;
+    margin-left: 20px;
+    text-align: left;
+    list-style: none;
+  }
+  .sidebar ul li a {
+    color: white;
+    text-decoration: none;
+    display: block;
+  }
+  .sidebar ul li:hover {
+    cursor: pointer;
+  }
 .login-container {
     background-color: white;
     padding:30px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
+    width:80%;
 }
 h2 {
     text-align: center;
